--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo/logo.png" />
+    <link rel="icon" type="image/png" href="/logo/main.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Grand Gate Properties | Premium Real Estate in Dubai, India & Georgia</title>
-    <meta name="title" content="Grand Gate Properties | Premium Real Estate in Dubai, India & Georgia" />
-    <meta name="description" content="Discover luxury properties for sale and rent in Dubai, India, and Georgia. Grand Gate Properties offers premium apartments, villas, and off-plan developments with expert guidance." />
-    <meta name="keywords" content="Dubai real estate, India properties, Georgia real estate, luxury apartments Dubai, villas for sale, off-plan properties, property investment, real estate agents, Grand Gate Properties" />
+    <title>Grand Gate Properties | Premium Real Estate in Dubai, India</title>
+    <meta name="title" content="Grand Gate Properties | Premium Real Estate in Dubai, India" />
+    <meta name="description" content="Discover luxury properties for sale and rent in Dubai, India. Grand Gate Properties offers premium apartments, villas, and off-plan developments with expert guidance." />
+    <meta name="keywords" content="Dubai real estate, India properties real estate, luxury apartments Dubai, villas for sale, off-plan properties, property investment, real estate agents, Grand Gate Properties" />
     <meta name="author" content="Grand Gate Properties" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
@@ -18,8 +18,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ariesestates.com/" />
-    <meta property="og:title" content="Grand Gate Properties | Premium Real Estate in Dubai, India & Georgia" />
-    <meta property="og:description" content="Discover luxury properties for sale and rent in Dubai, India, and Georgia. Expert real estate services and premium listings." />
+    <meta property="og:title" content="Grand Gate Properties | Premium Real Estate in Dubai, India" />
+    <meta property="og:description" content="Discover luxury properties for sale and rent in Dubai, India, . Expert real estate services and premium listings." />
     <meta property="og:image" content="/logo/logo.png" />
     <meta property="og:site_name" content="Grand Gate Properties" />
     <meta property="og:locale" content="en_US" />
@@ -27,8 +27,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ariesestates.com/" />
-    <meta property="twitter:title" content="Grand Gate Properties | Premium Real Estate in Dubai, India & Georgia" />
-    <meta property="twitter:description" content="Discover luxury properties for sale and rent in Dubai, India, and Georgia. Expert real estate services and premium listings." />
+    <meta property="twitter:title" content="Grand Gate Properties | Premium Real Estate in Dubai, India" />
+    <meta property="twitter:description" content="Discover luxury properties for sale and rent in Dubai, India, . Expert real estate services and premium listings." />
     <meta property="twitter:image" content="/logo/logo.png" />
     
     <!-- Geo Tags -->
