--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Theme Color -->
-    <meta name="theme-color" content="#D3A188" />
+    <meta name="theme-color" content="#BD9B5F" />
   </head>
   <body>
     <div id="root"></div>
